hphp/test/slow/concurrent/concurrent_gating.php.expectf
Fatal error: Concurrent is disabled in %s on line 7
